# Skin-Lesion-Classifier

./: .gitignore  README.md  docker-compose.yml
Notebooks/: EDA.ipynb  Error_analysis.ipynb  Training.ipynb  threshold_tuning.ipynb
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/models/: read.me
backend/src/: api.py  config.py  inference.py  model.py  monitoring.py  schemas.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
